--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>m2-entrega-blog-m2</title>
 </head>
-<body>
-  
-</body>
+
+  <body>
+    <main class="main__container"> 
+      <form class="main__container__form">
+        <h1> Entrar </h1>
+        <label for="email"></label>
+        <input name="email" id="emailInput" type="email" placeholder="Email">
+
+        <label for="password"></label>
+        <input name="password" id="passwordInput" type="password" placeholder="Senha">
+        <button type="submit" id="buttonLogin"> Entrar </button>
+      </form>
+    </main>
+    
+    <script type="module" src="src/scripts/index.js"></script>
+  </body>
 </html>
