--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -28,6 +28,6 @@
       </form>
     </main>
     
-    <script type="module" src="src/scripts/index.js"></script>
+    <script type="module" src="../scripts/signup.js"></script>
   </body>
 </html>
