--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://conteudo-kenzie-fullstack.vercel.app/modulo_1/_entrega_sprint_1/img/favicon.jpeg">
+  <link rel="stylesheet" href="./src/styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/index.css">
+  <link rel="stylesheet" href="./src/styles/style.css">
   <title>m2-entrega-blog-m2</title>
 </head>
-<body>
-  
-</body>
+
+  <body>
+    <main class="main__container"> 
+      <form class="main__container__form">
+        <h1> Entrar </h1>
+        <label for="email"></label>
+        <input name="email" id="emailInput" type="email" placeholder="Email">
+
+        <label for="password"></label>
+        <input name="password" id="passwordInput" type="password" placeholder="Senha">
+        <button type="submit" id="buttonLogin"> Entrar </button>
+      </form>
+    </main>
+    
+    <script type="module" src="src/scripts/index.js"></script>
+    
+  </body>
 </html>
