feat: css e alteracoes de html

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   <link rel="icon" href="https://conteudo-kenzie-fullstack.vercel.app/modulo_1/_entrega_sprint_1/img/favicon.jpeg">
   <link rel="stylesheet" href="./src/styles/reset.css">
   <link rel="stylesheet" href="./src/styles/index.css">
-  <link rel="stylesheet" href="./src/styles/style.css">
   <title>m2-entrega-blog-m2</title>
 </head>
 
   <body>
+    <header>
+      <div class="container">
+          <img class="logo" src="./src/img/Logo.png" alt="logo da Kenzie"> 
+      </div>
+  </header>
     <main class="main__container"> 
       <form class="main__container__form">
         <h1> Entrar </h1>
         <label for="email"></label>
         <input name="email" id="emailInput" type="email" placeholder="Email">
-
+ 
         <label for="password"></label>
         <input name="password" id="passwordInput" type="password" placeholder="Senha">
         <button type="submit" id="buttonLogin"> Entrar </button>
