--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="container">
-          <img class="logo" src="../Logo.png" alt="logo da Kenzie">
+          <img class="logo" src="../img/Logo.png" alt="logo da Kenzie"> 
       </div>
   </header>
     <main class="main__container"> 
