feat: alterando trabaho

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://conteudo-kenzie-fullstack.vercel.app/modulo_1/_entrega_sprint_1/img/favicon.jpeg">
+  <link rel="stylesheet" href="./src/styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/index.css">
   <title>m2-entrega-blog-m2</title>
 </head>
 
   <body>
+    <header>
+      <div class="container">
+          <img class="logo" src="./src/img/Logo.png" alt="logo da Kenzie"> 
+      </div>
+  </header>
     <main class="main__container"> 
       <form class="main__container__form">
         <h1> Entrar </h1>
@@ -21,5 +29,6 @@
     </main>
     
     <script type="module" src="src/scripts/index.js"></script>
+
   </body>
 </html>
